welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type lnt
var x:lnt = 10
      ^Variables:4: error: not found: value estSurBuscuit
if (estSurBuscuit==false){
    ^Variables:5: error: value && is not a member of Unit
	avance()&&x=x+1
                ^Variables:7: error: type mismatch;
 found   : Unit
 required: Boolean
	while(x=0==false){
               ^