welcome.lessons.welcome.variables.Variables.scala.code
var x:lnt = 10
x=0
if (estSurBuscuit==false){
	avance()&&x=x+1
}else{
	while(x=0==false){
		recule()
	}
}
